// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard page component renders correctly if game list is loading 1`] = `
<LayoutAuth>
  <Row
    gutter={24}
  >
    <Col
      offset={1}
      span={22}
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        Welcome to the Old School Game Library
      </h1>
      <Carousel
        imageArray={
          Array [
            "super-mario-kart.png",
            "super-mario-world.jpg",
            "top-gear.jpg",
          ]
        }
        intervalSeconds={5}
      />
    </Col>
  </Row>
  <Row
    gutter={24}
  >
    <Col
      offset={2}
      span={8}
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <Link
          to="/library"
        >
          Library
        </Link>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h1
          className="text-center"
        >
          <Spin
            size="large"
            spinning={true}
            style={
              Object {
                "marginTop": "2vh",
              }
            }
            tip="Loading, please wait..."
            wrapperClassName=""
          />
        </h1>
      </div>
    </Col>
    <Col
      offset={2}
      span={8}
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <Link
          to="/favs"
        >
          Your Favs
        </Link>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h1
          className="text-center"
        >
          <Spin
            size="large"
            spinning={true}
            style={
              Object {
                "marginTop": "2vh",
              }
            }
            tip="Loading, please wait..."
            wrapperClassName=""
          />
        </h1>
      </div>
    </Col>
  </Row>
</LayoutAuth>
`;

exports[`Dashboard page component renders correctly if has finished loading 1`] = `
<LayoutAuth>
  <Row
    gutter={24}
  >
    <Col
      offset={1}
      span={22}
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        Welcome to the Old School Game Library
      </h1>
      <Carousel
        imageArray={
          Array [
            "super-mario-kart.png",
            "super-mario-world.jpg",
            "top-gear.jpg",
          ]
        }
        intervalSeconds={5}
      />
    </Col>
  </Row>
  <Row
    gutter={24}
  >
    <Col
      offset={2}
      span={8}
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <Link
          to="/library"
        >
          Library
        </Link>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h3
          className="text-primary"
        >
          Total: 
          2000
        </h3>
        <h3
          className="text-primary"
          key="id1"
        >
          SNES
          : 
          1000
        </h3>
        <h3
          className="text-primary"
          key="id2"
        >
          PSX
          : 
          1000
        </h3>
      </div>
    </Col>
    <Col
      offset={2}
      span={8}
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <Link
          to="/favs"
        >
          Your Favs
        </Link>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h3
          className="text-primary"
        >
          Total: 
          1500
        </h3>
        <h3
          className="text-primary"
          key="id3"
        >
          SNES
          : 
          500
        </h3>
        <h3
          className="text-primary"
          key="id4"
        >
          PSX
          : 
          1000
        </h3>
      </div>
    </Col>
  </Row>
</LayoutAuth>
`;
